--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,9 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+<h1>Help</h1>
+<p>
+  欢迎来到我的博客</br>
+  Get help on the Ruby on Rails Tutorial at the
+  <a href="http://railstutorial.org/help">Rails on Tutorial help page</a>
+  To get help on this sample app,see the
+  <a href="http://rubyonrails.org/book">Rails Tutorial book</a>. 
+</p>
