--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,14 @@
-<% provide(:title, 'Home') %>
-<h1>Sample App</h1>
-<p>
-  欢迎来到我的博客</br>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Rugy on Rails Tutorial</a>
-  sample application.
-  #Find me in app/views/static_pages/home.html.erb
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to the Sample App</h1>
+  
+  <h2>
+    欢迎来到我的博客</br>
+    This is the home page for the
+    <a href="http://railstutorial.org/">Rugy on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+<%= link_to image_tag("huaduo.jpeg", alt: "Rails",width: "100",height: "75"), '/home/gp/rails_projects/sample_app/app/assets/images/' %>
+
