--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
                     Account <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">             
-                    <li><%= link_to "Profile", current_user %></li>
+                    <li><%= link_to "Profile", '#' %></li>
                     <li><%= link_to "Settings", '#' %>
                     <li class="divider"></li>
                     <li> 
